--- a/.gitignore
+++ b/.gitignore
@@ -182,3 +182,6 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,node,react
+
+#sql test commands
+commands.sql
