--- a/server/package.json
+++ b/server/package.json
@@ -15,10 +15,12 @@
     "@prisma/client": "^3.9.2",
     "bcrypt": "^5.0.1",
     "express": "^4.17.2",
+    "express-session": "^1.17.3",
     "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/express-session": "1.17.0",
     "@types/node": "^17.0.17",
     "nodemon": "^2.0.16",
     "prisma": "^3.9.2",
