--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -4,6 +4,7 @@ COPY package*.json /app
 RUN npm install
 COPY . .
 EXPOSE 3001
-ENV DATABASE_URL "postgresql://postgres:postgres@wishlist-db-postgres-new:5432/wishlist-db"
+ENV DATABASE_URL="postgresql://postgres:postgres@wishlist-db-postgres-new:5432/wishlist-db"
+ENV PORT=3001
 RUN npx prisma generate
 CMD ["npm", "start"]
