--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -6,4 +6,5 @@ COPY . .
 EXPOSE 3001
 ENV DATABASE_URL="postgresql://postgres:postgres@wishlist-db-postgres-new:5432/wishlist-db"
 ENV PORT=3001
+RUN npx prisma generate
 CMD ["npm", "start"]
