--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "wishlist-app",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
+  "proxy": "http://localhost:3001",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -10,17 +11,26 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.3.1",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/stack": "^6.2.1",
     "expo": "~45.0.0",
+    "expo-secure-store": "~11.2.0",
     "expo-status-bar": "~1.3.0",
+    "native-base": "^3.4.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-svg": "12.3.0",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@types/jest": "^28.1.0",
     "@types/react": "~17.0.21",
-    "@types/react-native": "~0.66.13",
+    "@types/react-native": "^0.66.18",
+    "@types/react-test-renderer": "^18.0.0",
     "typescript": "~4.3.5"
   },
   "private": true
