Modified for azure deployment
Changed from postgresql to sqlserver and changed the connection starting
for the database. Also fixed a type error in dbManager.ts.

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -4,7 +4,7 @@ COPY package*.json /app
 RUN npm install
 COPY . .
 EXPOSE 3001
-ENV DATABASE_URL="postgresql://postgres:postgres@wishlist-db-postgres-new:5432/wishlist-db"
+ENV DATABASE_URL="wishlisterdb.database.windows.net;database=wishlist-db;Authentication=Active Directory Default;"
 ENV PORT=3001
 RUN npx prisma generate
 CMD ["npm", "start"]
