--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,8 +1,8 @@
 FROM node:16-alpine
 WORKDIR /app
 COPY package*.json /app
+RUN npm install ./server
 COPY . .
-RUN npm install
 EXPOSE 3001
 ENV DATABASE_URL="wishlisterdb.database.windows.net;database=wishlist-db;Authentication=Active Directory Default;"
 ENV PORT=3001
