--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:16-alpine
 WORKDIR /app
 COPY package*.json /app
-RUN npm install ./server
+RUN npm install
 COPY . .
 EXPOSE 3001
 ENV DATABASE_URL="wishlisterdb.database.windows.net;database=wishlist-db;Authentication=Active Directory Default;"
