Changed connection starting
Modifified connection string in Dockerfile

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -4,7 +4,7 @@ COPY ./server .
 RUN ls
 RUN npm install
 EXPOSE 3001
-ENV DATABASE_URL="sqlserver://wishlisterdb.database.windows.net;database=wishlist-db;Authentication=Active Directory Default;"
+ENV DATABASE_URL="Server=wishlisterdb.database.windows.net;database=wishlist-db;Authentication=Active Directory Default;"
 ENV PORT=3001
 RUN npx prisma generate
 CMD ["npm", "start"]
