Changed how the server authenticates with the database
Removed old docker build image workflow and made the database connection
string used by the node server a build arg that gets a github secret.

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -4,7 +4,8 @@ COPY ./server .
 RUN ls
 RUN npm install
 EXPOSE 3001
-ENV DATABASE_URL="sqlserver://Server=wishlisterdb.database.windows.net;database=wishlist-db;Authentication=Active Directory Default;"
+ARG DATABASE_CONNECTION_STRING
+ENV DATABASE_URL=${DATABASE_CONNECTION_STRING}
 ENV PORT=3001
 RUN npx prisma generate
 CMD ["npm", "start"]
