--- a/.github/workflows/main_wishlister.yml
+++ b/.github/workflows/main_wishlister.yml
@@ -32,6 +32,7 @@ jobs:
         push: true
         tags: wishlistregistry.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_dc99863cf3014e4aaa2486f575491628 }}/wishlist-app-node-backend:${{ github.sha }}
         file: ./server/Dockerfile
+        build-args: DATABASE_CONNECTION_STRING=${{ secrets.DATABASE_CONNECTION_STRING }}
 
   deploy:
     runs-on: ubuntu-latest
