Added more secret keys
Added more secret keys to github secrets. These are used during the
build process.

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,11 +1,14 @@
 FROM node:16-alpine
 WORKDIR /app
 COPY ./server .
-RUN ls
 RUN npm install
 EXPOSE 3001
 ARG DATABASE_CONNECTION_STRING
+ARG REFRESH_TOKEN_SECRET_ARG
+ARG AUTH_TOKEN_SECRET_ARG
 ENV DATABASE_URL=${DATABASE_CONNECTION_STRING}
+ENV REFRESH_TOKEN_SECRET=${REFRESH_TOKEN_SECRET_ARG}
+ENV AUTH_TOKEN_SECRET=${AUTH_TOKEN_SECRET_ARG}
 ENV PORT=3001
 RUN npx prisma generate
 CMD ["npm", "start"]
