--- a/.github/workflows/main_wishlister.yml
+++ b/.github/workflows/main_wishlister.yml
@@ -33,8 +33,8 @@ jobs:
         tags: wishlistregistry.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_dc99863cf3014e4aaa2486f575491628 }}/wishlist-app-node-backend:${{ github.sha }}
         file: ./server/Dockerfile
         build-args: |
-          DATABASE_CONNECTION_STRING=${{ secrets.DATABASE_CONNECTION_STRING }},
-          REFRESH_TOKEN_SECRET_ARG=${{ secrets.REFRESH_TOKEN_SECRET }},
+          DATABASE_CONNECTION_STRING=${{ secrets.DATABASE_CONNECTION_STRING }}
+          REFRESH_TOKEN_SECRET_ARG=${{ secrets.REFRESH_TOKEN_SECRET }}
           AUTH_TOKEN_SECRET_ARG=${{ secrets.AUTH_TOKEN_SECRET }}
 
   deploy:
