--- a/.github/workflows/wishlister_api_deploy.yml
+++ b/.github/workflows/wishlister_api_deploy.yml
@@ -33,7 +33,7 @@ jobs:
       with:
         push: true
         tags: wishlistregistry.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_dc99863cf3014e4aaa2486f575491628 }}/wishlist-app-node-backend:${{ github.sha }}
-        file: ./server/Dockerfile
+        file: ./server/Dockerfile.production
         build-args: |
           DATABASE_CONNECTION_STRING=${{ secrets.DATABASE_CONNECTION_STRING }}
           REFRESH_TOKEN_SECRET_ARG=${{ secrets.REFRESH_TOKEN_SECRET }}
