--- a/client/package.json
+++ b/client/package.json
@@ -10,30 +10,30 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/datetimepicker": "^6.3.2",
+    "@react-native-community/datetimepicker": "6.7.3",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
     "dotenv": "^16.0.1",
-    "expo": "~45.0.0",
-    "expo-secure-store": "~11.2.0",
-    "expo-status-bar": "~1.3.0",
+    "expo": "^48.0.0",
+    "expo-secure-store": "~12.1.1",
+    "expo-status-bar": "~1.4.4",
     "native-base": "^3.4.6",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-native": "^0.68.2",
-    "react-native-gesture-handler": "^2.4.2",
-    "react-native-safe-area-context": "4.2.4",
-    "react-native-svg": "12.3.0",
-    "react-native-web": "0.17.7"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.71.3",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-svg": "13.4.0",
+    "react-native-web": "~0.18.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
+    "@babel/core": "^7.20.0",
     "@types/jest": "^28.1.0",
-    "@types/react": "~17.0.21",
+    "@types/react": "~18.0.27",
     "@types/react-native": "^0.66.18",
     "@types/react-test-renderer": "^18.0.0",
-    "typescript": "~4.3.5"
+    "typescript": "^4.9.4"
   },
   "private": true
 }
