--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
+    "@reduxjs/toolkit": "^1.9.3",
     "dotenv": "^16.0.1",
     "expo": "^48.0.0",
     "expo-secure-store": "~12.1.1",
@@ -26,10 +27,13 @@
     "react-native-gesture-handler": "~2.9.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-svg": "13.4.0",
-    "react-native-web": "~0.18.11"
+    "react-native-web": "~0.18.11",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@redux-devtools/core": "^3.13.1",
     "@types/jest": "^28.1.0",
     "@types/react": "~18.0.27",
     "@types/react-native": "^0.66.18",
